# configgery-client-python

./: .gitignore  README.md  pyproject.toml  requirements_test.txt  setup.cfg  setup.py
.github/workflows/: deploy.yml  tests.yml
configgery/: client.py
src/configgery/: client.py
tests/: FakeHTTPResponse.py  test_client.py
