[metadata]
name = configgery-client-python
version = 0.0.1
author = Configgery Pty Ltd
author_email = support@configgery.com
description = Python client for devices interacting with configgery.com
long_description = file: README.md
long_description_content_type = text/markdown
keywords=configgery, iot, configuration
url = https://github.com/Configgery/configgery-client-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
